Задача 1 - Числа, кратные 3 или 5

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Euler"
+    }
+  },
+  "defaultProject": "Euler",
+  "cli": {
+    "analytics": false
+  }
 }
